# foma

./: .gitignore
foma/: CMakeLists.txt  constructions.c  foma.h  fomalib.h  io.c  lex.cmatrix.c  lex.interface.c  lex.lexc.c  lex.yy.c  lexcread.c  regex.c  test_apply.cpp  test_compile.cpp
foma/examples/: simple_date
